--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flower Market</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="main.js"></script>
+    <script src="https://kit.fontawesome.com/256c63fa14.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="shortcut icon" href="./assets/fav-croped.png" type="image/x-icon">
 </head>
 <body>
     
