add main section.here add Our Plants section with product cards, add flowers lovers section,deals section,design Flowers & Plants Lover section with image and content,Create Latest Deals section with promotional offers

--- a/index.html
+++ b/index.html
@@ -43,6 +43,136 @@
                     fresh flowers that are perfect for any occasion. </p>
             </div>
         </div>
-    </header>
+    </header>  
+
+    <main class=" lg:max-w-6xl mx-auto px-3">
+        <!-- main sections started from here -->
+        <div class="plant text-center lg:mt-10 ">
+            <h1 class="noto-serif-font text-[1.5rem] lg:text-[50px] md:text-[2rem] my-3 font-bold"><span
+                    class="text-[var(--color-primary)]">Our </span>Plants</h1>
+            <p class="opacity-50 lg:mx-50 lg:text-[22px]">Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
+        <!-- card container -->
+        <div class="card-conatiner my-6 grid gap-3 gap-y-5 grid-cols-2 md:grid-cols-4 ">
+            <div class="card text-center p-2">
+                <img class="w-full" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl  mt-5 font-bold">Lilly Blossom</h4>
+                <h3 class="text-2xl font-bold my-2">20 USD</h3>
+                <button class="button-styles w-full mt-2" onclick="alertMassege();">Add to cart</button>
+            </div>
+            <div class="card text-center p-2">
+                <img class="w-full" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl  mt-5 font-bold">Lilly Blossom</h4>
+                <h3 class="text-2xl font-bold my-2">20 USD</h3>
+                <button class="button-styles w-full mt-2" onclick="alertMassege();">Add to cart</button>
+            </div>
+            <div class="card text-center p-2">
+                <img class="w-full" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl  mt-5 font-bold">Lilly Blossom</h4>
+                <h3 class="text-2xl font-bold my-2">20 USD</h3>
+                <button class="button-styles w-full mt-2" onclick="alertMassege();">Add to cart</button>
+            </div>
+            <div class="card text-center p-2">
+                <img class="w-full" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl  mt-5 font-bold">Lilly Blossom</h4>
+                <h3 class="text-2xl font-bold my-2">20 USD</h3>
+                <button class="button-styles w-full mt-2" onclick="alertMassege();">Add to cart</button>
+            </div>
+            <div class="card text-center p-2">
+                <img class="w-full" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl  mt-5 font-bold">Lilly Blossom</h4>
+                <h3 class="text-2xl font-bold my-2">20 USD</h3>
+                <button class="button-styles w-full mt-2" onclick="alertMassege();">Add to cart</button>
+            </div>
+            <div class="card text-center p-2">
+                <img class="w-full" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl  mt-5 font-bold">Lilly Blossom</h4>
+                <h3 class="text-2xl font-bold my-2">20 USD</h3>
+                <button class="button-styles w-full mt-2" onclick="alertMassege();">Add to cart</button>
+            </div>
+            <div class="card text-center p-2">
+                <img class="w-full" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl  mt-5 font-bold">Lilly Blossom</h4>
+                <h3 class="text-2xl font-bold my-2">20 USD</h3>
+                <button class="button-styles w-full mt-2" onclick="alertMassege();">Add to cart</button>
+            </div>
+            <div class="card text-center p-2">
+                <img class="w-full" src="assets/sample-flower-image.png" alt="">
+                <h4 class=" text-xl  mt-5 font-bold">Lilly Blossom</h4>
+                <h3 class="text-2xl font-bold my-2">20 USD</h3>
+                <button class="button-styles w-full mt-2" onclick="alertMassege();">Add to cart</button>
+            </div>
+        </div>
+        <!-- flowers lovers section-->
+        <div class=" flowers-lover lg:my-40 mx-auto lg:max-h-[530px] my-5 md:flex basis-0.5 gap-20">
+            <div class="image-flowers-lovers w-full h-full relative">
+                <img class="w-full" src="assets/flower-store.png" alt="">
+                <img class="hidden lg:block h-[280px] w-[280px] absolute -top-28 -right-28 animate-spin [animation-duration:4s]"
+                    src="assets/trusted-badge.png" alt="">
+            </div>
+            <div class="content-flowers-lovers flex flex-col justify-center">
+                <h1 class="noto-serif-font text-[24px] lg:text-[50px] md:text-[32px] font-bold my-3">Flowers & Plants Lover
+                </h1>
+                <ul class="list-disc mx-5 opacity-50">
+                    <li class="my-3">
+                        <p class="lg:text-[22px]">
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                            to exotic blooms, we offer a wide variety of fresh.
+                        </p>
+                    </li>
+                    <li class="my-3">
+                        <p class="lg:text-[22px]">
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                            to exotic blooms, we offer a wide variety of fresh.
+                        </p>
+                    </li>
+                    <li class="my-3 ">
+                        <p class="lg:text-[22px]">
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                            to exotic blooms, we offer a wide variety of fresh.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- deals section -->
+        <div class="deals text-center mt-10">
+            <h1 class="noto-serif-font text-[24px] lg:text-[50px] md:text-[32px] font-bold my-5"><span
+                    class="text-[var(--color-primary)]">Latest</span> Deals</h1>
+            <p class="lg:text-[22px] opacity-50 mx-5">Indulge your senses with the beauty and fragrance of our fresh flower
+                shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
+        <!-- deals card container -->
+        <div class="container mx-auto my-10 md:my-30 flex flex-col md:flex-row justify-center gap-4">
+            <div class="first w-full h-full md:w-[35%]  flex flex-col gap-4">
+                <div
+                    class="last-child relative w-full md:h-[calc((100% - 16px) / 2)] h-[175px] md:h-[200px] rounded-2xl overflow-hidden bg-[url('./assets/deal-bloom.png')] bg-cover bg-center">
+                    <div class="absolute inset-0 bg-black/50 text-white flex flex-col items-center justify-center gap-3">
+                        <h1 class="noto-serif-font text-[20px] font-bold">60% Off | Bloom Plant</h1>
+                        <button class="btn noto-serif-font font-semibold underline">Shop Now</button>
+                    </div>
+                </div>
+                <div
+                    class="last-child relative w-full md:h-[calc((100% - 16px) / 2)] h-[175px] md:h-[200px] rounded-2xl overflow-hidden bg-[url('./assets/deal-ana.png')] bg-cover bg-center ">
+                    <div class="absolute inset-0 bg-black/50 text-white flex flex-col items-center justify-center gap-3">
+                        <h1 class="noto-serif-font text-[20px] font-bold">30% Off | Ana Plant</h1>
+                        <button class="btn noto-serif-font font-semibold underline">Shop Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="last w-full md:w-[65%] h-full">
+                <div
+                    class="last-child relative w-full h-[175px] md:h-[416px]  rounded-2xl overflow-hidden bg-[url('./assets/deal-zabo.png')] bg-cover bg-center">
+                    <div class="absolute inset-0 bg-black/50 text-white flex flex-col items-center justify-center gap-3">
+                        <h1 class="noto-serif-font text-[20px] lg:text-[40px] font-bold">25% Off | Zabo Plant</h1>
+                        <button class="btn noto-serif-font font-semibold underline">Shop Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
 </body>
 </html>
