add footer section.Add responsive footer with newsletter input and social links.

--- a/index.html
+++ b/index.html
@@ -173,6 +173,73 @@
         </div>
     </main>
 
+    <footer class="mb-10">
+        <!-- footer section starts from here -->
+        <div
+            class="footer-first h-[270px] md:h-[400px] lg:h-[530px] my-12 bg-[url('./assets/news-letter-bg.png')] bg-cover flex justify-center items-center flex-col gap-5">
+            <h1 class="text-[20px] noto-serif-font lg:text-[50px] font-bold text-white">Join the colorful Bunch</h1>
+            <div class="input w-[83%] md:w-[70%] lg:w-[60%] lg:h-[65px] bg-white h-[50px] flex justify-between">
+                <input class="w-[70%] h-full ps-5 lg:ps-8" type="email" placeholder="Write email"><button
+                    class="btn-sub w-[30%] lg:text-[22px] h-full bg-[var(--color-primary)] cursor-pointer text-white font-semibold">Subscribe</button>
+            </div>
+        </div>
+        <div class="bottom px-3 lg:max-w-6xl mx-auto  grid grid-cols-1 self-center lg:gap-10 md:grid-cols-4">
+            <div class="one  ">
+                <img class="w-[100px] inline-block" src="assets/logo.png" alt="">
+                <p class="opacity-50 lg:text-[22px]  my-4 me-5">Indulge your senses with the beauty and fragrance of our
+                    fresh flower shop. </p>
+            </div>
+            <div class="two  lg:pl-25
+                ">
+                <ul>
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Home</a>
+                    </li>
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">About
+                            us</a></li>
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Blog</a>
+                    </li>
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">FAQ</a>
+                    </li>
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
+                            href="">Contacts</a></li>
+                </ul>
+            </div>
+            <div class="three lg:pl-10
+                ">
+                <ul class="">
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
+                            href="">Feature</a></li>
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
+                            href="">Pricing</a></li>
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Privacy
+                            policy</a></li>
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Terms of
+                            service</a></li>
+                    <li class="footer-list-styles"><a
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Help
+                            center</a></li>
+                </ul>
+            </div>
+            <div class="four text-center mt-5">
+                <ul class="flex justify-start items-center gap-5">
+                    <li><a href=""><img src="assets/icon-linkedin.png" alt=""></a></li>
+                    <li><a href=""><img src="assets/icon-twitter.png" alt=""></a></li>
+                    <li><a href=""><img src="assets/icon-facebook.png" alt=""></a></li>
+                    <li><a href=""><img src="assets/icon-youtube.png" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 </html>
