--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Market</title>
-    <link rel="stylesheet" href="styles/style.css">
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/256c63fa14.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="shortcut icon" href="./assets/fav-croped.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+
+<body class="inter-font max-w-[1440px] mx-auto lg:mx-auto ">
     <header class="lg:max-w-6xl mx-auto">
         <!-- header sectiona starts from here -->
         <nav class=" h-15 mt-5 lg:mt-10 flex items-center justify-between  mx-5">
@@ -19,11 +21,12 @@
             </div>
             <!-- nav-for-only desktop -->
             <ul class="hidden md:flex gap-15 items-center">
-                <li><a class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Home</a></li>
+                <li><a class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Home</a>
+                </li>
                 <li><a class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Shope</a>
                 </li>
-                <li><a class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">About us</a>
-                </li>
+                <li><a class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">About
+                        us</a></li>
                 <li><a class="lg:text-[22px]" href=""><i class="fa-solid fa-cart-shopping lg:text-[22px]"></i> Cart
                         ($56)</a></li>
             </ul>
@@ -43,7 +46,7 @@
                     fresh flowers that are perfect for any occasion. </p>
             </div>
         </div>
-    </header>  
+    </header>
 
     <main class=" lg:max-w-6xl mx-auto px-3">
         <!-- main sections started from here -->
@@ -112,25 +115,25 @@
                     src="assets/trusted-badge.png" alt="">
             </div>
             <div class="content-flowers-lovers flex flex-col justify-center">
-                <h1 class="noto-serif-font text-[24px] lg:text-[50px] md:text-[32px] font-bold my-3">Flowers & Plants Lover
-                </h1>
+                <h1 class="noto-serif-font text-[24px] lg:text-[50px] md:text-[32px] font-bold my-3">Flowers & Plants
+                    Lover</h1>
                 <ul class="list-disc mx-5 opacity-50">
                     <li class="my-3">
                         <p class="lg:text-[22px]">
-                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
-                            to exotic blooms, we offer a wide variety of fresh.
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.
                         </p>
                     </li>
                     <li class="my-3">
                         <p class="lg:text-[22px]">
-                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
-                            to exotic blooms, we offer a wide variety of fresh.
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.
                         </p>
                     </li>
                     <li class="my-3 ">
                         <p class="lg:text-[22px]">
-                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
-                            to exotic blooms, we offer a wide variety of fresh.
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.
                         </p>
                     </li>
                 </ul>
@@ -140,22 +143,24 @@
         <div class="deals text-center mt-10">
             <h1 class="noto-serif-font text-[24px] lg:text-[50px] md:text-[32px] font-bold my-5"><span
                     class="text-[var(--color-primary)]">Latest</span> Deals</h1>
-            <p class="lg:text-[22px] opacity-50 mx-5">Indulge your senses with the beauty and fragrance of our fresh flower
-                shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <p class="lg:text-[22px] opacity-50 mx-5">Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         </div>
         <!-- deals card container -->
         <div class="container mx-auto my-10 md:my-30 flex flex-col md:flex-row justify-center gap-4">
             <div class="first w-full h-full md:w-[35%]  flex flex-col gap-4">
                 <div
                     class="last-child relative w-full md:h-[calc((100% - 16px) / 2)] h-[175px] md:h-[200px] rounded-2xl overflow-hidden bg-[url('./assets/deal-bloom.png')] bg-cover bg-center">
-                    <div class="absolute inset-0 bg-black/50 text-white flex flex-col items-center justify-center gap-3">
+                    <div
+                        class="absolute inset-0 bg-black/50 text-white flex flex-col items-center justify-center gap-3">
                         <h1 class="noto-serif-font text-[20px] font-bold">60% Off | Bloom Plant</h1>
                         <button class="btn noto-serif-font font-semibold underline">Shop Now</button>
                     </div>
                 </div>
                 <div
                     class="last-child relative w-full md:h-[calc((100% - 16px) / 2)] h-[175px] md:h-[200px] rounded-2xl overflow-hidden bg-[url('./assets/deal-ana.png')] bg-cover bg-center ">
-                    <div class="absolute inset-0 bg-black/50 text-white flex flex-col items-center justify-center gap-3">
+                    <div
+                        class="absolute inset-0 bg-black/50 text-white flex flex-col items-center justify-center gap-3">
                         <h1 class="noto-serif-font text-[20px] font-bold">30% Off | Ana Plant</h1>
                         <button class="btn noto-serif-font font-semibold underline">Shop Now</button>
                     </div>
@@ -164,7 +169,8 @@
             <div class="last w-full md:w-[65%] h-full">
                 <div
                     class="last-child relative w-full h-[175px] md:h-[416px]  rounded-2xl overflow-hidden bg-[url('./assets/deal-zabo.png')] bg-cover bg-center">
-                    <div class="absolute inset-0 bg-black/50 text-white flex flex-col items-center justify-center gap-3">
+                    <div
+                        class="absolute inset-0 bg-black/50 text-white flex flex-col items-center justify-center gap-3">
                         <h1 class="noto-serif-font text-[20px] lg:text-[40px] font-bold">25% Off | Zabo Plant</h1>
                         <button class="btn noto-serif-font font-semibold underline">Shop Now</button>
                     </div>
@@ -190,27 +196,27 @@
                     fresh flower shop. </p>
             </div>
             <div class="two  lg:pl-25
-                ">
+            ">
                 <ul>
                     <li class="footer-list-styles"><a
-                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Home</a>
-                    </li>
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
+                            href="">Home</a></li>
                     <li class="footer-list-styles"><a
-                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">About
-                            us</a></li>
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
+                            href="">About us</a></li>
                     <li class="footer-list-styles"><a
-                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Blog</a>
-                    </li>
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
+                            href="">Blog</a></li>
                     <li class="footer-list-styles"><a
-                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">FAQ</a>
-                    </li>
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
+                            href="">FAQ</a></li>
                     <li class="footer-list-styles"><a
                             class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
                             href="">Contacts</a></li>
                 </ul>
             </div>
             <div class="three lg:pl-10
-                ">
+            ">
                 <ul class="">
                     <li class="footer-list-styles"><a
                             class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
@@ -219,11 +225,11 @@
                             class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
                             href="">Pricing</a></li>
                     <li class="footer-list-styles"><a
-                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Privacy
-                            policy</a></li>
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
+                            href="">Privacy policy</a></li>
                     <li class="footer-list-styles"><a
-                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Terms of
-                            service</a></li>
+                            class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]"
+                            href="">Terms of service</a></li>
                     <li class="footer-list-styles"><a
                             class="opacity-50 hover:opacity-100 transition 0.5s ease-in-out lg:text-[22px]" href="">Help
                             center</a></li>
@@ -239,7 +245,7 @@
             </div>
         </div>
     </footer>
-
-
+    
 </body>
+
 </html>
